@@ -49,6 +49,7 @@
 * AuthorizeNet: Truncate nameOnAccount field [duff]
 * Tns: Fix ipAddress field [duff]
 * WorldNet: New gateway support [varyonic]
+* BraintreeBlue: Allow channel override [duff]
 
 
 == Version 1.58.0 (March 1, 2016)
